--- a/draft.tex
+++ b/draft.tex
@@ -175,10 +175,10 @@ The other two equilibria are separating equilibria in which low types and high t
 	The strategy of not giving concessions in period 0, then playing Trust unless the other country defects to Fight is an equilibrium strategy for high types if $\delta_h \geq \frac{W}{(1-p)W + p(T + D)}$.
 	\label{theorem:1}
 \end{theorem}
+
 \emph{Proof}: See appendix.
 \\
-\\
-In this equilibrium two mutually distrustful countries go ahead and behave as if they trust anyway, taking a risk. This generally will happen when the result of trusting and then being betrayed is not catastrophic, or the odds of such a scenario are small.  This is representative of a case where countries have suspicions about each other, but proceed anyway. 
+In this equilibrium, two mutually distrustful countries go ahead and behave as if they trust anyway, taking a risk. This generally will happen when the result of trusting and then being betrayed is not catastrophic, or the odds of such a scenario are small.  This is representative of a case where countries have suspicions about each other, but proceed anyway. 
 
 Examples of a \emph{no-concessions separating equilibrium} are most likely to be those where countries have traditionally had good relations but something has recently come in the way. Certain relationships between the USA and countries that its wikileaks alienated- such as Italy- would be an example. Italy essentially laughed off the criticisms and reassured the USA of its commitment to their relationship. Warsaw pact countries generally allowed the USSR similar leeway; it was better to have occasionally imperfect cooperation than conflict. Certain things can disrupt trust without completely derailing actions. 
 
@@ -214,6 +214,8 @@ Equilibrium payoffs beginning from round 1 are now easily described by noting on
 \emph{Proof:} See appendix.
 
 This smallest concession is denoted $g_h^*$ and is calculated in equation (11) in the appendix to be $p(T+D).$
+
+This `best' concessions separating equilibrium, where `best' is from the standpoint of high-type welfare, is justified by appeal to the Intuitive Criterion equilibrium refinement, in which out of equilibrium beliefs put zero weight on types that can never gain from deviating.
 
 In general, a high probability of a high type will make this no-concessions separating equilibrium very attractive. Under low $p$, high types are better off choosing the pooling equilibrium.
 
